--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
   <div class="col-12 col-lg-8">
 
     
-    <h1>Biography</h1>
+    <h1>About Me</h1>
 
     <p>Aayush is a research Assistant at IIT-Delhi.
 Aayush is  interested in working in Deep learning with application in computer vision domain (more
